--- a/language-server/package.json
+++ b/language-server/package.json
@@ -18,7 +18,8 @@
   "author": "getrafty.org",
   "license": "MIT",
   "dependencies": {
-    "fragments-protocol": "file:../protocol"
+    "fragments-protocol": "file:../protocol",
+    "ignore": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
