--- a/language-server/tsconfig.json
+++ b/language-server/tsconfig.json
@@ -6,7 +6,7 @@
     "declarationMap": true,
     "baseUrl": "./",
     "paths": {
-      "fragments-protocol": ["../protocol/src/index"]
+      "fgmpack-protocol": ["../protocol/src/index"]
     }
   },
   "include": ["src/**/*"],
