--- a/vscode-extension/tsconfig.json
+++ b/vscode-extension/tsconfig.json
@@ -2,11 +2,10 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "types": ["node", "vscode"],
     "paths": {
-      "fragments-protocol": ["../../protocol/src/index"]
+      "fgmpack-protocol": ["../protocol/dist/index"]
     }
   },
   "include": ["src/**/*"],
