--- a/protocol/package.json
+++ b/protocol/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fragments-protocol",
+  "name": "fgmpack-protocol",
   "version": "0.1.0",
-  "description": "Shared protocol types for the Fragments language server and clients",
+  "description": "Shared protocol types for the Fragment Pack language server and clients",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -10,6 +10,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.6.0"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.5.2",
+    "jest": "^30.1.3",
+    "ts-jest": "^29.4.4",
+    "typescript": "^5.9.2"
   }
 }
