--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
   },
   "references": [
     { "path": "./protocol" },
+    { "path": "./fgmpack-db" },
     { "path": "./language-server" },
     { "path": "./vscode-extension" }
   ]
