--- a/.gitignore
+++ b/.gitignore
@@ -29,10 +29,14 @@ replay_pid*
 
 # Node.js artifacts
 node_modules/
-**/node_modules/
-dist/
-**/dist/
 npm-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 *.tsbuildinfo
+package-lock.json
+
+# Build output (centralized in /dist)
+dist/
+
+# VSCode extension package
+*.vsix
