--- a/package.json
+++ b/package.json
@@ -1,80 +1,30 @@
 {
-  "name": "fgmpack",
-  "displayName": "Fragment Pack",
-  "description": "Manage versioned code fragment packs",
+  "name": "fgmpack-workspace",
   "version": "0.1.0",
-  "publisher": "getrafty",
+  "private": true,
+  "description": "Fragment Pack workspace - Manage versioned code fragment packs",
   "repository": {
     "type": "git",
     "url": "https://github.com/getrafty/fragments.git"
   },
-  "engines": {
-    "vscode": "^1.74.0"
-  },
-  "categories": [
-    "Other"
+  "workspaces": [
+    "protocol",
+    "fgmpack-db",
+    "language-server",
+    "vscode-extension"
   ],
-  "activationEvents": [
-    "onStartupFinished"
-  ],
-  "main": "./dist/extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "fgmpack.getVersion",
-        "title": "Get Active Version",
-        "category": "Fragment Pack"
-      },
-      {
-        "command": "fgmpack.insertMarker",
-        "title": "Insert Fragment Marker",
-        "category": "Fragment Pack"
-      },
-      {
-        "command": "fgmpack.listVersions",
-        "title": "List Versions",
-        "category": "Fragment Pack"
-      },
-      {
-        "command": "fgmpack.switchVersion",
-        "title": "Switch Version",
-        "category": "Fragment Pack"
-      }
-    ],
-    "keybindings": [
-      {
-        "command": "fgmpack.insertMarker",
-        "key": "ctrl+shift+f",
-        "mac": "cmd+shift+f",
-        "when": "editorTextFocus"
-      }
-    ],
-    "menus": {
-      "editor/context": [
-        {
-          "command": "fgmpack.insertMarker",
-          "group": "fgmpack",
-          "when": "editorTextFocus"
-        }
-      ]
-    }
-  },
   "scripts": {
-    "bootstrap": "npm install --prefix protocol && npm install --prefix fgmpack-db && npm install --prefix language-server && npm install --prefix vscode-extension",
-    "build": "npm run build:deps && webpack --mode development",
-    "build:deps": "npm run build:protocol && npm run build:db && npm run build:language-server",
-    "build:protocol": "npm run build --prefix protocol",
-    "build:db": "npm run build --prefix fgmpack-db",
-    "build:language-server": "npm run build --prefix language-server",
-    "build:language-server:binary": "npm run build:binary --prefix language-server",
+    "build": "npm run build:protocol && npm run build:db && npm run build:language-server && npm run build:extension",
+    "build:protocol": "npm run build -w fgmpack-protocol",
+    "build:db": "npm run build -w fgmpack-db",
+    "build:language-server": "npm run build -w fgmpack-language-server",
+    "build:extension": "npm run build -w fgmpack",
     "compile": "npm run build",
-    "watch": "npm run build:deps && webpack --mode development --watch",
-    "vscode:prepublish": "npm run package",
-    "package": "npm run build:deps && webpack --mode production --devtool hidden-source-map",
-    "vsce:package": "npx vsce package --out dist/",
-    "install-extension": "npm run vsce:package && code --install-extension dist/*.vsix",
-    "install-server": "npm run build:language-server:binary && scripts/install-server.sh",
-    "uninstall-server": "scripts/install-server.sh --uninstall"
+    "watch": "npm run build && npm run watch -w fgmpack",
+    "clean": "npm run clean --workspaces --if-present",
+    "test": "npm run test --workspaces --if-present",
+    "package": "npm run build && npm run vsce:package -w fgmpack",
+    "package:server": "npm run build:binary -w fgmpack-language-server"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
