--- a/fgmpack-db/tsconfig.json
+++ b/fgmpack-db/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "../dist/fgmpack-db",
     "rootDir": "./src",
     "baseUrl": "./",
-    "declarationMap": true,
+    "tsBuildInfoFile": "../dist/fgmpack-db/.tsbuildinfo",
     "paths": {
       "fgmpack-protocol": ["../protocol/src/index"]
     }
