--- a/language-server/tsconfig.json
+++ b/language-server/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./",
-    "declarationMap": true,
+    "outDir": "../dist/language-server",
+    "rootDir": "./src",
     "baseUrl": "./",
+    "tsBuildInfoFile": "../dist/language-server/.tsbuildinfo",
     "paths": {
       "fgmpack-protocol": ["../protocol/src/index"],
       "fgmpack-db": ["../fgmpack-db/src/index"]
