--- a/protocol/package.json
+++ b/protocol/package.json
@@ -2,8 +2,8 @@
   "name": "fgmpack-protocol",
   "version": "0.1.0",
   "description": "Shared protocol types for the Fragment Pack language server and clients",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "../dist/protocol/index.js",
+  "types": "../dist/protocol/index.d.ts",
   "scripts": {
     "build": "tsc --build",
     "dev": "tsc --build --watch"
