--- a/protocol/tsconfig.json
+++ b/protocol/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "../dist/protocol",
     "rootDir": "./src",
-    "declarationMap": true
+    "tsBuildInfoFile": "../dist/protocol/.tsbuildinfo"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
